--- a/src/app/index.html
+++ b/src/app/index.html
@@ -77,6 +77,7 @@
             <li class="pure-menu-item menu-logo"><a href="/"></a></li>
             <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'process'}" href="process">How It Works</a></li>
             <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'projects'}" href="projects" >Projects</a></li>
+            <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'clients'}" href="clients" >Clients</a></li>
             <!--
             <li class="pure-menu-item"><a class="pure-menu-link" ng-class="{ selected: vm.activeSection === 'blog' || vm.activeSection === 'post' || vm.activeSection === 'postsByTag' || vm.activeSection === 'postsBySearch'}" ui-sref="blog">Blog</a></li>
             -->
@@ -110,7 +111,7 @@
       <div class="content" ng-cloak>
         <div ui-view="main">
           <div class="main-loading-container" ng-if="false">
-            <img class="main-loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="MondoTV.co is loading..." />
+            <img class="main-loading-icon" src="https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/loading.gif" alt="mondotv.co is loading..." />
           </div>
         </div>
       </div>
@@ -130,7 +131,7 @@
           <li class="pure-button youtube"><a href="http://youtube.com/mondotvuk" class="icon icon-play"></a></li>
           <li class="pure-button twitter"><a href="http://twitter.com/mondotvuk" class="icon icon-twitter"></a></li>
           <li class="pure-button facebook"><a href="http://facebook.com/mondotvuk" class="icon icon-facebook"></a></li>
-          <li class="pure-button linkedin"><a href="http://linkedin.com/mondotvuk"n class="icon icon-linkedin"></a></li>
+          <li class="pure-button linkedin"><a href="http://linkedin.com/mondotvuk" class="icon icon-linkedin"></a></li>
         </ul>
       </section>
       <section class="footer-mondo">
