--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -16,9 +16,14 @@
 @yellow: #fedd00;
 @cyan: #3dcaff;
 @blue: #3b72f3;
-@dark-blue: #2f4858;
+@dark-blue: #0a369d;
+@grey-blue: #34495e;
+@red: #d91e18;
+@purple: #9a12b3;
+@pink: #f62459;
+@green: #2ecc71;
 
-@gradient-rainbow: 90deg, @cyan 15%, @cyan 15%, @cyan 12%, @blue 12%, @blue 32%, @dark-blue 32%, @dark-blue 35%, #34495e 35%, #34495e 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @dark-orange 63%, @dark-orange 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
+@gradient-rainbow: 90deg, @cyan 15%, @cyan 15%, @cyan 12%, @blue 12%, @blue 32%, @dark-blue 32%, @dark-blue 35%, @grey-blue 35%, @grey-blue 55%, @yellow 55%, @yellow 59%, @orange 59%, @orange 63%, @dark-orange 63%, @dark-orange 82%, #ecf0f1 82%, #ecf0f1 92%, #95a5a6 92%;
 
 // font
 @font-brand: 'Nexa Bold', sans-serif;
