--- a/src/app/blog/post.view.html
+++ b/src/app/blog/post.view.html
@@ -1,13 +1,13 @@
 <div class="pure-g page-content">
-    <div class="pure-u-1" ng-class="vm.post.tags">
-        <h1>{{ ::vm.post.title.rendered }}</h1>
-        <span class="brand-logo"></span>
-        <div class="post-meta">
-            <ul class="tags">
-                <li ng-repeat="tag in vm.post.tags"><span class="{{ ::tag }}"></span></li>
-            </ul>
-        </div>
-
-        <div class="post-body" ng-bind-html="vm.post.content"></div>
+  <div class="pure-u-1" ng-class="vm.post.tags">
+    <div class="brand-logo"></div>
+    <h1>{{ ::vm.post.title.rendered }}</h1>
+    <div class="post-meta">
+      <ul class="tags">
+        <li ng-repeat="tag in vm.post.tags"><span class="{{ ::tag }}">{{ ::tag }}</span></li>
+      </ul>
     </div>
+
+    <div class="post-body" ng-bind-html="vm.post.content"></div>
+  </div>
 </div>
