--- a/src/app/index.html
+++ b/src/app/index.html
@@ -95,7 +95,7 @@
         </a>
       </div>
       <div class="pure-u-1 strapline">
-        <h4>We make web based video content. Tech focused, doctor approved. Check it out.</h4>
+        <h4>We make web based videos. Tech focused. Doctor approved.</h4>
       </div>
     </section>
 
@@ -118,7 +118,6 @@
     </main>
 
     <footer class="footer" ng-cloak>
-      <hr />
       <section class="footer-about">
         <div class="about">
           <h2>{{ ::vm.about[0].title.rendered }}</h2>
@@ -141,8 +140,8 @@
         <ul class="footer-terms">
           <li>&copy; MondoTV Ltd. 2016.</li>
           <li>|</li>
-          <li>Terms:</li>
-          <li><a href="/terms/conditions" class="pure-button">Conditions</a></li>
+          <li>Terms &amp; Conditions:</li>
+          <li><a href="/terms/conditions" class="pure-button">Website</a></li>
           <li><a href="/terms/service" class="pure-button">Service</a></li>
         </ul>
       </section>
