--- a/src/app/clients/clients.view.html
+++ b/src/app/clients/clients.view.html
@@ -2,7 +2,9 @@
   <section class="client-list">
     <div class="pure-u-1  pure-u-lg-1-2 pure-u-xl-1-3 client-item" ng-repeat="client in vm.clients">
       <a ui-sref="client({ name: client.slug })" ng-class="client.tags" class="client-link">
-        <span class="brand-logo"></span>
+        <div class="brand-logo">
+          <h2>{{ ::client.title.rendered }}</h2>
+        </div>
       </a>
     </div>
   </section>
