--- a/src/less/home.less
+++ b/src/less/home.less
@@ -205,15 +205,6 @@
   text-align: center;
 }
 
-.button-section > .loading-icon {
-  position: absolute;
-  bottom: 200%;
-  left: 50%;
-  .transform(~'translateX(-50%)');
-  height: 80px;
-  .border-radius(0.313em);
-}
-
 .button-section .pure-button {
   padding-right: 0.6em;
 }
@@ -221,6 +212,13 @@
 .button-section .icon-plus {
   line-height: 0.9em;
   vertical-align: middle;
+}
+
+.loading-icon {
+  margin: 0 auto 2em;
+  height: 80px;
+  width: 80px;
+  .border-radius(0.313em);
 }
 
 /*! Lity - v2.0.0 - 2016-09-09
