--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4,6 +4,7 @@
 @import "home";
 @import "blog";
 @import "projects";
+@import "clients";
 @import "wp";
 @import "fonts";
 
@@ -78,9 +79,9 @@ nav {
 }
 
 .logo-tv {
-  height: 225px;
+  height: 150px;
   width: 150px;
-  background: url('https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/logo-still.jpg') no-repeat 10px -5px;
+  background: url('https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/logo-still.jpg') no-repeat 15px -80px;
   background-size: cover;
   vertical-align: bottom;
   @media (max-width: 35.5em) {
@@ -97,11 +98,7 @@ nav {
 
 .strapline h4 {
   display: inline-block;
-  max-width: 440px;
-}
-
-.header-link:hover .logo-tv {
-  background: url('https://s3-us-west-2.amazonaws.com/assets.mondotv.co/logos/logo-loop.gif') no-repeat 10px -5px;
+  max-width: 280px;
 }
 
 .header-social {
@@ -288,29 +285,6 @@ body.projects .main-view {
   margin: auto;
 }
 
-.footer > hr {
-  position: relative;
-  margin: 4em auto 4em;
-  max-width: 40%;
-  border: none;
-}
-
-.footer > hr:before,
-.footer > hr:after {
-  position: absolute;
-  content: '';
-  height: 4px;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 5;
-}
-
-.footer > hr:before {
-  max-width: 1400px;
-  .linear-gradient-multi(@gradient-rainbow);
-}
-
 .footer > .footer-about > .about {
   margin: 0 1em 2em;
   padding: 1em 2em;
@@ -341,8 +315,8 @@ body.projects .main-view {
 .footer > .footer-social .pure-button {
   display: inline-block;
   margin: 0 0.75em;
-  padding: 0.313em 0.5em;
-  font-size: 0.875;
+  padding: 0.2em 0.313em 0.5em;
+  font-size: 0.875em;
   height: 1.875em;
   width: 1.875em;
   border-radius: 50%;
