--- a/src/less/blog.less
+++ b/src/less/blog.less
@@ -204,9 +204,12 @@ body.project .post-body p:firstchild {
   }
 }
 
+body.client,
 body.project {
-  h1 {
+  .page-content h1 {
+    margin: 0.5em auto 1em;
     text-align: center;
+    max-width: 10em;
   }
 
   .brand-logo {
@@ -231,7 +234,7 @@ body.project {
   .pill:not([class^="brand-"]),
   .pill:not([class*=" brand-"]) {
     margin: 0 0.186em;
-    padding: 0.25em 0.5em;
+    padding: 0.25em 0.75em;
     color: #fff;
     font-size: 0.875em;
     .border-radius(50px);
