--- a/src/less/brands.less
+++ b/src/less/brands.less
@@ -42,6 +42,7 @@
 
 .brand-capco .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054809/CAPCO-300x63.png');
+  background-size: auto 80%;
 }
 
 .brand-cocoon .brand-logo {
@@ -57,162 +58,168 @@
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054816/dna-digest-300x63.png');
 }
 
-.brand-flux-innovation-lounge .brand-logo{
+.brand-flux-innovation-lounge .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054819/flux-300x63.png');
 }
 
-.brand-glisser .brand-logo{
+.brand-glisser .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054822/glisser-300x63.png');
   background-size: auto 70%;
 }
 
-.brand-google .brand-logo{
+.brand-google .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19124731/GOOGLE-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-google-campus .brand-logo{
+.brand-google-campus .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054825/google-campus-300x63.png');
 }
 
-.brand-growth-accelerator .brand-logo{
+.brand-growth-accelerator .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054828/growth-accelerator-300x63.png');
 }
 
-.brand-judo-payment .brand-logo{
+.brand-judo-payment .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054832/judo-300x63.png');
 }
 
-.brand-kwanji .brand-logo{
+.brand-kwanji .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054835/KWANJI-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-la-fosse-associates .brand-logo{
+.brand-la-fosse-associates .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054838/la-fosse-300x63.png');
 }
 
-.brand-linkedin .brand-logo{
+.brand-linkedin .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19124734/LINKEDIN-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-mumo-active .brand-logo{
+.brand-mumo-active .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054842/mumo-active-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-o2 .brand-logo{
+.brand-o2 .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054849/o2-300x63.png');
 }
 
-.brand-payfriendz .brand-logo{
+.brand-payfriendz .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054852/PAYFRIENDZ-300x63.png');
 }
 
-.brand-ping-pong-fight-club .brand-logo{
+.brand-ping-pong-fight-club .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054855/ping-pong-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-planet-manna .brand-logo{
+.brand-planet-manna .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054858/planet-manna-300x63.png');
 }
 
-.brand-qudini .brand-logo{
+.brand-qudini .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054901/QUDINI-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-repositive .brand-logo{
+.brand-repositive .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054903/REPOSITIVE-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-reward-technology .brand-logo{
+.brand-reward-technology .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054906/reward-technology-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-rotageek .brand-logo{
+.brand-rotageek .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054910/ROTAGEEK-300x63.png');
 }
 
-.brand-runway-east .brand-logo{
+.brand-runway-east .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054914/runway-east-300x63.png');
 }
 
-.brand-said-yummy-chocolate .brand-logo{
+.brand-said-yummy-chocolate .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054916/said-300x63.png');
 }
 
-.brand-seedcamp .brand-logo{
+.brand-seedcamp .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054920/SEEDCAMP-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-silicon-drinkabout .brand-logo{
+.brand-silicon-drinkabout .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054923/silicon-drinkabout-300x63.png');
 }
 
-.brand-spottinstyle .brand-logo{
+.brand-spottinstyle .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054927/spottinstyle-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-suave .brand-logo{
+.brand-streetwise .brand-logo {
+  background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/30060339/streetwise-uk-300x63.png');
+}
+
+.brand-suave .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054930/suave-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-tech-city .brand-logo{
+.brand-tech-city .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054936/tech-city-300x63.png');
 }
 
-.brand-tech-hub .brand-logo{
+.brand-tech-hub .brand-logo {
   background-image: url('');
 }
 
-.brand-tech-2-brand .brand-logo{
+.brand-tech-2-brand .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054933/TECH2BRAND-300x63.png');
 }
 
-.brand-tribe-sports .brand-logo{
+.brand-tribe-sports .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054938/TRIBESPORTS-300x63.png');
 }
 
-.brand-union-coffee .brand-logo{
+.brand-union-coffee .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054941/union-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-up-europe .brand-logo{
+.brand-up-europe .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054951/up-europe-300x63.png');
   background-size: auto 90%;
 }
 
-.brand-veglo.brand-logo{
+.brand-veglo .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054955/veglo-300x63.png');
+  background-size: auto 80%;
 }
 
-.brand-wayra .brand-logo{
+.brand-wayra .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19054959/WAYRA-300x63.png');
   background-size: auto 80%;
 }
 
-.brand-we-work .brand-logo{
+.brand-we-work .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19055002/wework-300x63.png');
   background-size: auto 80%;
 }
 
 .brand-winnow .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19124740/WINNOW-300x63.png');
+  background-size: auto 80%;
 }
 
-.brand-wonderluk .brand-logo{
+.brand-wonderluk .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19055005/wonderluk-300x63.png');
 }
 
-.brand-yniche .brand-logo{
+.brand-yniche .brand-logo {
   background-image: url('https://d1u68gg9qsavh7.cloudfront.net/wordpress/wp-content/uploads/2016/09/19055007/YNICHE-300x63.png');
 }
