--- a/src/less/clients.less
+++ b/src/less/clients.less
@@ -1,5 +1,13 @@
-body.clients .brand-logo {
-  margin-bottom: 2em;
-  height: 3em;
+body.clients .brand-logo,
+body.client .brand-logo {
+  margin-bottom: 4em;
   color: transparent;
+}
+
+body.clients .brand-logo {
+  height: 3em;
+}
+
+body.client .brand-logo {
+  height: 4em;
 }
