--- a/src/less/icons.less
+++ b/src/less/icons.less
@@ -55,7 +55,7 @@
 }
 
 .pill:after {
-  padding-left: 0.25em;
+  padding-left: 0.313em;
 }
 
 .icon[class^="brand-"],
@@ -242,6 +242,10 @@
 
 .pill.category-ben:after {
   content: 'Ben';
+}
+
+.pill.category-crowdfunding:after {
+  content: 'Crowdfunding';
 }
 
 .pill.category-event:after {
