--- a/src/app/clients/singleClient.view.html
+++ b/src/app/clients/singleClient.view.html
@@ -1,24 +1,15 @@
 <div class="pure-g page-content">
-  <div class="pure-u-1" ng-class="vm.posts[0].tags">
+  <section class="pure-u-1 brand-{{ ::vm.client }}">
     <div class="brand-logo"></div>
-    <div class="pure-u-1">
-      <ul id="isotopeContainer" class="video-list" isotope-container ng-cloak>
-        <li class="video-item" ng-repeat="video in vm.posts" ng-class="video.tags" isotope-item ng-cloak>
-          <a href="{{ ::video.videoUrl }}" data-lity>
-            <figure>
-              <img class="pure-img" ng-src="{{ ::video.featured_media.sizes.medium.source_url }}" alt="{{ ::video.title.rendered }}" />
-              <figcaption class="video-caption">
-                <h3>{{ ::video.title.rendered }}</h3>
-              </figcaption>
-              <ul class="type-list">
-                <li class="type-item" ng-repeat="tag in video.tags"><div class="icon {{ ::tag }}"></div></li>
-              </ul>
-            </figure>
-          </a>
-        </li>
-      </ul>
+  </section>
+  <section class="project-list">
+    <div class="pure-u-1 pure-u-lg-1-2 pure-u-xl-1-3 project-item" ng-repeat="project in vm.projects">
+      <a ui-sref="project({ id: project.id, title: project.slug })" ng-class="project.tags" class="project-link">
+        <h3>{{ project.title.rendered }}</h3>
+        <ul class="tags">
+          <li ng-repeat="tag in project.tags"><div class="pill {{ ::tag }}"></div></li>
+        </ul>
+      </a>
     </div>
-
-    <div class="post-body" ng-bind-html="vm.post.content"></div>
-  </div>
+  </section>
 </div>
