--- a/src/app/home/home.view.html
+++ b/src/app/home/home.view.html
@@ -30,8 +30,9 @@
 </section>
 
 <!-- Slider -->
+<!--
 <section class="slider-contain page-content">
-  <slick class="featured-articles" init-onload=true infinite=true autoplay=true dots=true arrows=true data="vm.allTestimonials" ng-if="vm.allTestimonials.length">
+  <slick class="testimonials" init-onload=true infinite=true autoplay=true dots=true arrows=true data="vm.allTestimonials" ng-if="vm.allTestimonials.length">
     <div ng-repeat="post in vm.allTestimonials" style="background:#333;">
       <div class="slide-content">
         <h1>{{ ::post.title.rendered }}</h1>
@@ -39,3 +40,4 @@
     </div>
   </slick>
 </section>
+-->
