Tweak homepage wording.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -95,7 +95,7 @@
         </a>
       </div>
       <div class="pure-u-1 strapline">
-        <h4>We make web based videos.<br class="strap-break"/>Tech focused. Doctor approved.</h4>
+        <h4>We make web videos.<br class="strap-break"/>Tech focused. Doctor approved.</h4>
       </div>
     </section>
 
@@ -134,7 +134,7 @@
         </ul>
       </section>
       <section class="footer-mondo">
-        <p>MondoTV</p>
+        <p>MondoTV, Limited</p>
         <p>20-22 Wenlock Road, London,</p>
         <p>England, N1 7GU</p>
         <ul class="footer-terms">
